The layout.html file is approximatively finished

--- a/journal/templates/Journal/index.html
+++ b/journal/templates/Journal/index.html
@@ -1,4 +1,4 @@
 {%extends "Journal/layout.html"%}
 {%block body%}
-
+<p>Hi, This is a french project. It's a Secret Journal who is electronic and coded with python, the site web is hosted by Python Anywhere</p>
 {%endblock%}
