--- a/journal/templates/Journal/layout.html
+++ b/journal/templates/Journal/layout.html
@@ -4,7 +4,7 @@
     <head>
         <nav>
             <ul>
-                <a><i class="fa fa-home" style="font-size:24px;"></i></a>
+                <a href="{%url 'index'%}"><i class="fa fa-home" style="font-size:24px;"></i></a>
                 <a href="#">Documentation</a>
                 <a href="#" >Your Journal</a>
             </ul>
