error in the favicon

--- a/journal/templates/Journal/index.html
+++ b/journal/templates/Journal/index.html
@@ -1,4 +1,7 @@
 {%extends "Journal/layout.html"%}
 {%block body%}
-<p>Hi, This is a french project. It's a Secret Journal who is electronic and coded with python, the site web is hosted by Python Anywhere</p>
+<p style="margin: 1em;">
+Hi, This is a french project. It's a Secret Journal who is electronic and coded with python, the site web is hosted by Python Anywhere. 
+<span><a href="https://github.com/MeSentreprise/JournalIntime" target="_blank">The Github Link</a></span>
+</p>
 {%endblock%}
