--- a/journal/templates/Journal/layout.html
+++ b/journal/templates/Journal/layout.html
@@ -4,6 +4,7 @@
     <head>
         <nav>
             <ul>
+                <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
                 <a href="{%url 'index'%}"><i class="fa fa-home" style="font-size:24px;"></i></a>
                 <a href="#">Documentation</a>
                 <a href="#" >Your Journal</a>
