--- a/journal/templates/Journal/layout.html
+++ b/journal/templates/Journal/layout.html
@@ -4,7 +4,7 @@
     <head>
         <nav>
             <ul>
-                <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+                <link rel="shortcut icon" href="{%static 'favicon.ico'%}">
                 <a href="{%url 'index'%}"><i class="fa fa-home" style="font-size:24px;"></i></a>
                 <a href="#">Documentation</a>
                 <a href="#" >Your Journal</a>
