--- a/journal/templates/Journal/index.html
+++ b/journal/templates/Journal/index.html
@@ -3,5 +3,12 @@
 <p style="margin: 1em;">
 Hi, This is a french project. It's a Secret Journal who is electronic and coded with python, the site web is hosted with heroku.
 <span><a href="https://github.com/MeSentreprise/JournalIntime" target="_blank">The Github Link</a></span>
+{{message|safe}}
 </p>
+<style>
+    h6{
+        border-color: red;
+        background-color:red;
+    }
+</style>
 {%endblock%}
