Update the views and index files

--- a/journal/templates/Journal/index.html
+++ b/journal/templates/Journal/index.html
@@ -1,14 +1,21 @@
 {%extends "Journal/layout.html"%}
+{%block head%}
+<div>
+{{message|safe}}
+</div>
+{%endblock%}
 {%block body%}
 <p style="margin: 1em;">
 Hi, This is a french project. It's a Secret Journal who is electronic and coded with python, the site web is hosted with heroku.
 <span><a href="https://github.com/MeSentreprise/JournalIntime" target="_blank">The Github Link</a></span>
-<div>
-{{message|safe}}
-</div>
 </p>
 <style>
     div{
+        padding-bottom:10px;
+        padding-top:10px;
+        border-radius: 3%;
+        text-align:center;
+        margin:75px;
         border-color: red;
         background-color:red;
     }
